2002-07-25  Morten Welinder  <terra@diku.dk>

	* import-R: Import also dgeom and pgeom.
	(import_file): Optimise "log(1-x)".  (Filed as R bug.)

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-07-09  Morten Welinder  <terra@diku.dk>

	* import-R (import_file): Import qpois.c also.

2002-06-21  Morten Welinder  <terra@diku.dk>

	* import-R: Import also dnbinom.c and dhyper.c

2002-06-20  Morten Welinder  <terra@diku.dk>

	* check-config-h.pl (guess_config_file): New function.

2002-06-19  Morten Welinder  <terra@diku.dk>

	* import-R (import_file): Remove some old hacks that are no longer
	needed.

	* import-R: Import also pexp.c and pweibull.c.

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-04-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.3

2002-03-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.2

2002-03-10  Jody Goldberg <jody@gnome.org>

	* Release 1.1.1

2002-03-05  Morten Welinder  <terra@diku.dk>

	* import-R (import_file): Translate named constants too.
	Eliminate various function synonyms.

2002-02-27  Morten Welinder  <terra@diku.dk>

	* import-R (import_file): Work a little harder on recognising "log"
 	as a function name.  Optimize a exp(y)-1 case.

2002-02-26  Morten Welinder  <terra@diku.dk>

	* import-R (import_file): New tool.

2002-02-18  Jody Goldberg <jody@gnome.org>

	* Release 1.1.0

2002-01-21  Jody Goldberg <jody@gnome.org>

	* Release 1.0.3

2002-01-15  Jody Goldberg <jody@gnome.org>

	* Release 1.0.2

2002-01-07  Morten Welinder  <terra@diku.dk>

	* check-trailing-commas: New tool.

	* check-config-h.pl: Fix after s/config/gnumeric-config/ change.
	Also skip intl directory.

2002-01-06  Jody Goldberg <jody@gnome.org>

	* Release 1.0.1

2001-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.0.0

2001-12-24  Jody Goldberg <jody@gnome.org>

	* Release 0.99.1

2001-12-15  Jody Goldberg <jody@gnome.org>

	* Release 0.99.0

2001-12-04  Morten Welinder  <terra@diku.dk>
