@@ -100,19 +100,19 @@ gnum_float qbinom (gnum_float x, gnum_float n, gnum_float p, gboolean lower_tail
 
 /* Negative binomial distribution.  */
 gnum_float dnbinom (gnum_float x, gnum_float n, gnum_float p, gboolean give_log);
+gnum_float pnbinom (gnum_float x, gnum_float n, gnum_float p, gboolean lower_tail, gboolean log_p);
 
 /* Hyper-geometrical distribution.  */
 gnum_float dhyper (gnum_float x, gnum_float r, gnum_float b, gnum_float n, gboolean give_log);
+gnum_float phyper (gnum_float x, gnum_float NR, gnum_float NB, gnum_float n, gboolean lower_tail, gboolean log_p);
 
 /* Geometrical distribution.  */
 gnum_float dgeom (gnum_float x, gnum_float p, gboolean give_log);
 gnum_float pgeom (gnum_float x, gnum_float p, gboolean lower_tail, gboolean log_p);
 
 /* Cauchy distribution.  */
-gnum_float dcauchy (gnum_float x, gnum_float location, gnum_float scale,
-		    gboolean give_log);
-gnum_float pcauchy (gnum_float x, gnum_float location, gnum_float scale,
-		    int lower_tail, gboolean log_p);
+gnum_float dcauchy (gnum_float x, gnum_float location, gnum_float scale, gboolean give_log);
+gnum_float pcauchy (gnum_float x, gnum_float location, gnum_float scale, gboolean lower_tail, gboolean log_p);
 
 /* Random number generation. */
 gnum_float random_01             (void);
